# rusty-chat

./: .env  Cargo.toml  README.md  docker-compose.yaml
migrations/: 20240829162253_create_user_table.sql
scripts/: reset.sh  run_dev.sh
src/: lib.rs  main.rs  startup.rs
src/api/: routes.rs
src/api/handler/: mod.rs  user.rs
src/config/: app_config.rs
src/db/repositories/: mod.rs  user.rs
src/models/: user.rs
src/services/: app.rs  user.rs
src/utils/: error.rs
src/websocket/: mod.rs
