[package]
name = "rusty-chat"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8", features = [ "runtime-tokio", "tls-rustls", "postgres" ] }
chrono = "0.4.38"
derive_more = { version = "1", features = ["full"] }
dotenvy = "0.15.7"
